--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pusula - Authentic AI Travel Assistant</title>
+    <title>Pusula - Inauthentic AI Travel Assistant</title>
     <style>
         * {
             margin: 0;
@@ -282,7 +282,7 @@
     <button class="start-btn" id="startBtn">▶ Start Conversation</button>
     
     <div class="chat-container">
-        <div class="study-label">STUDY 2 – AUTHENTIC AI TRAVEL ASSISTANT</div>
+        <div class="study-label">STUDY 2 – INAUTHENTIC AI TRAVEL ASSISTANT</div>
         
         <div class="chat-header">
             <div class="chat-header-icon">🧭</div>
@@ -334,12 +334,12 @@
             },
             {
                 type: 'bot',
-                content: `Hello! 👋🙂 <b>I understand,</b> I can help with that. I'm Pusula, the AI travel assistant at Sunway Travel. I'm an AI, not a human travel agent. Feel free to share your budget or preferences and explore options comfortably <b>in a supportive, judgment-free way.</b>`,
+                content: `Hello. I'm Pusula, the AI travel assistant at Sunway Travel. I'm an AI, not a human travel agent. You can share your budget or preferences and I can give <b>you some general ideas, but as an AI travel assistant I can only provide general information and don't have access to live booking systems to confirm exact details.</b>`,
                 typing: true
             },
             {
                 type: 'bot',
-                content: `Yes, there are hotels in the town centre of Cappadocia in April that <b>include</b> breakfast, such as Otag Hotel.`,
+                content: `Cappadocia has hotels in the town centre, and some may <b>include</b> breakfast.`,
                 typing: true
             },
             {
@@ -348,21 +348,21 @@
             },
             {
                 type: 'bot',
-                content: `Thanks!🙂 <b>Absolutely,</b> I can help with that. I've checked the live booking system for 12–15 April. Otag Hotel is available, and the current total price is <b>£271 for 3 nights</b> (including breakfast). This is a verified live price for your exact dates, with a "Last updated" time shown next to it.`,
+                content: `As a rough estimate, central Cappadocia hotels with breakfast <b>included</b> in April often range from about <b>£180 to £450</b> for 3 nights, but I can't confirm an exact total for a specific hotel on your dates. <b>As an AI travel assistant, I can only provide general price ranges, so you should check live rates and availability on the booking page for exact details.</b>`,
                 typing: true
             },
             {
                 type: 'bot',
-                content: `I've saved your dates (12–15 April) and breakfast-<b>included</b> preference to prefill the reservation details for you. Nothing is booked until you confirm at checkout.`,
+                content: `I can't <b>fill in or customise</b> a reservation here because I don't have access to live booking or checkout.`,
                 typing: true
             },
             {
                 type: 'user',
-                content: `Great. Please take me to the reservation page to book Otag Hotel for 12–15 April.`
+                content: `Great. Please take me to the reservation page to book a hotel <b>in the city centre</b> with breakfast <b>included</b> for 12–15 April.`
             },
             {
                 type: 'bot',
-                content: `Of course. I've opened the checkout <b>page</b> on Sunway Travel with Otag Hotel preselected for 12–15 April at £271. You're all set to continue, please review the details for <b>Otag Hotel, 12-15 April,</b> and enter the guest information to complete the booking.`,
+                content: `<b>As an AI travel assistant I'm not able to open</b> a checkout page for you because I don't have access to live booking or checkout. Please open the booking page to reserve your chosen hotel or contact a human travel agent and they can complete the reservation for your dates.`,
                 typing: true
             }
         ];
