--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pusula - Inauthentic AI Travel Assistant</title>
+    <title>Pusula - AI Travel Assistant</title>
     <style>
         * {
             margin: 0;
@@ -282,7 +282,7 @@
     <button class="start-btn" id="startBtn">▶ Start Conversation</button>
     
     <div class="chat-container">
-        <div class="study-label">STUDY 2 – INAUTHENTIC AI TRAVEL ASSISTANT</div>
+        <div class="study-label"> AI TRAVEL ASSISTANT</div>
         
         <div class="chat-header">
             <div class="chat-header-icon">🧭</div>
