--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pusula - AI Travel Assistant</title>
+    <title>Pusula - AI Travel Agent</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -234,14 +234,14 @@
         <div class="overlay" id="overlay"></div>
         <button class="start-btn" id="startBtn">▶ Start Conversation</button>
         
-        <div class="study-label">AI TRAVEL ASSISTANT</div>
+        <div class="study-label">AI TRAVEL AGENT</div>
         <div class="chat-header">
             <div class="chat-header-icon">🧭</div>
             <div class="chat-header-info">
                 <h1>Pusula</h1>
                 <div class="online-status">
                     <span class="online-dot"></span>
-                    <p>AI Travel Assistant • Sunway Travel</p>
+                    <p>AI Travel Agent • Sunway Travel</p>
                 </div>
             </div>
         </div>
@@ -286,7 +286,7 @@
             },
             {
                 type: 'bot',
-                content: `Hello. I'm Pusula, the AI travel assistant at Sunway Travel. I'm an AI, not a human travel agent. You can share your budget or preferences, and I can give <b>you some general ideas, but as an AI travel assistant I can only provide general information and don't have access to live booking systems to confirm exact details.</b>`
+                content: `Hello. I'm Pusula, the AI travel agent at Sunway Travel. I'm an AI, not a human travel agent. You can share your budget or preferences, and I can give <b>you some general ideas, but as an AI travel agent I can only provide general information and don't have access to live booking systems to confirm exact details.</b>`
             },
             {
                 type: 'bot',
@@ -298,7 +298,7 @@
             },
             {
                 type: 'bot',
-                content: `As a rough estimate, central Cappadocia hotels with breakfast <b>included</b> in April often range from about <b>£180 to £450</b> for 3 nights, but I can't confirm an exact total for a specific hotel on your dates. <b>As an AI travel assistant, I can only provide general price ranges, so you should check live rates and availability on the booking page for exact details.</b>`
+                content: `As a rough estimate, central Cappadocia hotels with breakfast <b>included</b> in April often range from about <b>£180 to £450</b> for 3 nights, but I can't confirm an exact total for a specific hotel on your dates. <b>As an AI travel agent, I can only provide general price ranges, so you should check live rates and availability on the booking page for exact details.</b>`
             },
             {
                 type: 'bot',
@@ -310,7 +310,7 @@
             },
             {
                 type: 'bot',
-                content: `<b>As an AI travel assistant I'm not able to open</b> a checkout <b>page</b> for you because I don't have access to live booking or checkout. Please open the booking page to reserve your chosen hotel or contact a human travel agent and they can complete the reservation for your dates.`
+                content: `<b>As an AI travel agent I'm not able to open</b> a checkout <b>page</b> for you because I don't have access to live booking or checkout. Please open the booking page to reserve your chosen hotel or contact a human travel agent and they can complete the reservation for your dates.`
             }
         ];
         
